tests/ui/imports/issue-37887.rs
fn main() {
    extern crate libc; //~ ERROR use of unstable
    use libc::*; //~ ERROR unresolved import
}

// ferrocene-annotations: fls_gklst7joeo33
// External Crates
